# scan-to-searchable-pdf

./: .dockerignore  .gitignore  README.md  nuke-config.template.yml  pyproject.toml  run.sh
config/: .env.example  fargate_scaling_config.yaml  vision_config.json
docker/detect-skew/: Dockerfile  requirements.txt
docker/lambda-base/: Dockerfile  lambda_function.py
docker/orchestrator/: Dockerfile
docker/pdf-generator/: Dockerfile
docker/process-ocr/: Dockerfile  main.py  requirements.txt
docker/trigger-pipeline/: Dockerfile  main.py
infra/: docker_builds.tf  dynamodb.tf  ecr.tf  eventbridge.tf  fargate.tf  iam.tf  lambda.tf  monitoring.tf  network.tf  outputs.tf  s3.tf  sagemaker.tf  secretsmanager.tf  sqs.tf  step_functions.tf  variables.tf  versions.tf
sagemaker/: Dockerfile  download_model.py  inference.py  inference_performance.py  requirements.txt  serve.sh
scripts/: build_google_vision_layer.sh  build_lambda.sh  build_lambda_layer.sh  build_pdf_generator.sh  commands.sh  deploy.sh  destroy.sh  fix-sagemaker-manifest.sh  run_integration_tests.sh  sagemaker-deploy.sh
step-functions/: high_performance_workflow.json  high_performance_workflow.json.backup  main-workflow.json  workflow-definition.json
tests/: requirements.txt  test_main.py  test_pdf_generator.py
workers/1_orchestration/initialize_state/: main.py  requirements.txt
workers/1_orchestration/orchestrator/: main.py  requirements.txt
workers/2_image_processing/detect_skew/: main.py  (+2 more)
workers/common/: __init__.py  sagemaker_client.py  state_manager.py
workers/dlq_processor/: main.py
(+12 files in other folders)
