[project]
name = "book-scan-workflow"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "boto3>=1.28.0",
    "google-cloud-vision>=3.4.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "fpdf2>=2.7.8",
    "Pillow>=10.0.0",
    "backoff>=2.2.0",
    "python-json-logger>=2.0.7",
    "psutil>=5.9.5",
    "reportlab>=4.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"